...
            android:layout_height="2dp"
            android:background="#34989C9C" />

    </LinearLayout>

    <TextView
        android:id="@+id/e1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reason for Reporting"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/e2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/e1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
...
