...
        android:textStyle="bold"
        android:layout_below="@id/f"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/sx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fiv"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
...
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/nin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eigh"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
...
