<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo" />

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:layout_below="@id/logo"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="12sp"
        android:textColor="#FF5722"
        android:textStyle="bold"
        android:layout_below="@id/reg"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:background="#34989C9C"
        android:hint="Enter Name"
        android:padding="12dp"
        android:textColorHint="#8B8B8B" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textSize="12sp"
        android:textColor="#FF5722"
        android:textStyle="bold"
        android:layout_below="@id/txtName"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:background="#34989C9C"
        android:hint="Enter Email"
        android:padding="12dp"
        android:textColorHint="#8B8B8B" />

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="12sp"
        android:textColor="#FF5722"
        android:textStyle="bold"
        android:layout_below="@id/txtEmail"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/txtNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:background="#34989C9C"
        android:hint="Enter Password"
        android:padding="12dp"
        android:textColorHint="#8B8B8B" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Country"
        android:textSize="12sp"
        android:textColor="#FF5722"
        android:textStyle="bold"
        android:layout_below="@id/txtNum"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/txtCtry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Country"
        android:textColorHint="#8B8B8B"
        android:layout_below="@id/country"
        android:padding="12dp"
        android:layout_margin="7dp"
        android:background="#34989C9C" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="City"
        android:textSize="12sp"
        android:textColor="#FF5722"
        android:textStyle="bold"
        android:layout_below="@id/txtCtry"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/txtCty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="City"
        android:textColorHint="#8B8B8B"
        android:layout_below="@id/city"
        android:padding="12dp"
        android:layout_margin="7dp"
        android:background="#34989C9C" />

    <Button
        android:id="@+id/but1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCty"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#FF5722"
        android:padding="15dp"
        android:text="Sign Up"
        android:textSize="25dp" />

    <Button
        android:id="@+id/but2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="Login"
        android:textColor="#5B5B5B"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>